[CXF-7741]ensure we can build CXF with JDK11